add study project

--- a/index.html
+++ b/index.html
@@ -80,6 +80,13 @@
                             </div>
                             
                             <div class="jobs__box">
+                                <div class="box__title">Учебные проекты</div>
+                                <div class="box__text">
+                                    <a class="box__link" target="_blank" href="https://alicetyu.github.io/study_projects/">Учебные проекты</a>
+                                </div>
+                            </div>
+                            
+                            <div class="jobs__box">
                                 <div class="box__title">Лендинги</div>
                                 <div class="box__text">
                                     <a class="box__link" target="_blank" href="https://alicetyu.github.io/Alivio/dist/">Проект Gulp (Alivio)</a>
