--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
 
                     <div class="main__skill">
                         <div class="skill__title">Работы</div>
+                        <div class="box__text">ссылка на сайт - (ссылка на гит)*</div>
                         <div class="skill__content">
                             <div class="jobs__box">
                                 <div class="box__title">Базовый проект HTML, CSS</div>
                                 <div class="box__text">
-                                    <a class="box__link" target="_blank" href="https://alicetyu.github.io/study_project/">Базовые навыки</a>
+                                    <a class="box__link" target="_blank" href="https://alicetyu.github.io/study_project/">Базовые навыки</a> 
+                                    <a class="box__link" target="_blank" href="https://github.com/AliceTYu/study_project">- (ссылка на гит)</a>
                                 </div>
                             </div>
                             
@@ -83,6 +85,7 @@
                                 <div class="box__title">Учебные проекты</div>
                                 <div class="box__text">
                                     <a class="box__link" target="_blank" href="https://alicetyu.github.io/study_projects/">Учебные проекты</a>
+                                    <a class="box__link" target="_blank" href="https://github.com/AliceTYu/study_projects">- (ссылка на гит)</a>
                                 </div>
                             </div>
                             
@@ -90,6 +93,7 @@
                                 <div class="box__title">Лендинги</div>
                                 <div class="box__text">
                                     <a class="box__link" target="_blank" href="https://alicetyu.github.io/Alivio/dist/">Проект Gulp (Alivio)</a>
+                                    <a class="box__link" target="_blank" href="https://github.com/AliceTYu/Alivio">- (ссылка на гит)</a>
                                 </div>
                             </div>
 
@@ -97,6 +101,7 @@
                                 <div class="box__title">Стажировки</div>
                                 <div class="box__text">
                                     <a class="box__link" target="_blank" href="https://alicetyu.github.io/WB_Frontend_L0/">WB</a>
+                                    <a class="box__link" target="_blank" href="https://github.com/AliceTYu/WB_Frontend_L0">- (ссылка на гит)</a>
                                 </div>
                             </div>
 
@@ -104,9 +109,11 @@
                                 <div class="box__title">Тестовые задания</div>
                                 <div class="box__text">
                                     <a class="box__link" target="_blank" href="https://alicetyu.github.io/test_task/">QSOFT стажировка</a>
+                                    <a class="box__link" target="_blank" href="https://github.com/AliceTYu/test_task">- (ссылка на гит)</a>
                                 </div>
                                 <div class="box__text">
                                     <a class="box__link" target="_blank" href="https://alicetyu.github.io/Welbex/dist/">Welbex</a>
+                                    <a class="box__link" target="_blank" href="https://github.com/AliceTYu/Welbex">- (ссылка на гит)</a>
                                 </div>
                             </div>
                         </div>
