add project now

--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
                             </div>
                             
                             <div class="jobs__box">
-                                <div class="box__title">Лендинги</div>
+                                <div class="box__title">Мои проекты</div>
+                                <div class="box__text">
+                                    <a class="box__link" target="_blank" href="https://alicetyu.github.io/minify/">Проект Webpack (Minify)</a>
+                                    <a class="box__link" target="_blank" href="https://github.com/AliceTYu/minify">- (ссылка на гит)</a> 
+                                    <span class="box__link--active">в процессе</span>
+                                </div>
                                 <div class="box__text">
                                     <a class="box__link" target="_blank" href="https://alicetyu.github.io/Alivio/dist/">Проект Gulp (Alivio)</a>
                                     <a class="box__link" target="_blank" href="https://github.com/AliceTYu/Alivio">- (ссылка на гит)</a>
